add an endpoint for publishing messages to transfer records to other systems
